# CANdevStudio

src/common/: CMakeLists.txt  componentmodel.h  config.cpp  config.hpp  log.hpp
src/components/candevice/: candeviceqt.h
src/components/canpython/: CMakeLists.txt  canpython.cpp  canpython.h  canpythonmodel.cpp  canpythonmodel.h  canpythonplugin.h  pythonmodule.cpp  pythonmodule.h
tests/: CMakeLists.txt  candevice_test.cpp  config_test.cpp  example_test.cpp  testhelpers.cpp  testhelpers.hpp
